# open-xiaoai

./: .gitignore  README.md
.github/workflows/: compile-client-rust.yml
docs/: service-discovery.md
examples/discovery/: README.md  main.py
examples/discovery-py/: main.py  pyproject.toml  start.sh
examples/discovery-rust/: Cargo.toml  start.sh
examples/discovery-rust/src/: discovery_protocol.rs  main.rs
examples/discovery-ts/: README.md  package-lock.json  package.json  start.sh
examples/discovery-ts/src/: discovery.ts  main.ts
examples/gemini/: README.md
examples/gemini/src/: server.rs
examples/migpt/: README.md  config.ts
examples/migpt/migpt/: xiaoai.ts
examples/migpt/src/: server.rs
examples/stereo/src/net/: discovery.rs
examples/xiaozhi/: Dockerfile  README.md  config.py  discovery_protocol.py  main.py  pyproject.toml
examples/xiaozhi/src/: lib.rs
examples/xiaozhi/xiaozhi/: xiaoai.py
examples/xiaozhi/xiaozhi/services/audio/: stream.py
examples/xiaozhi/xiaozhi/services/audio/kws/: __init__.py  sherpa.py
